<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_field_left_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"/>

        <TextView
            android:id="@+id/sign_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="+"/>

        <EditText
            android:id="@+id/input_field_right_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/addition_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/addition"/>

        <Button
            android:id="@+id/subtraction_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/subtraction"/>

        <Button
            android:id="@+id/multiplication_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/multiplication"/>

        <Button
            android:id="@+id/division_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/division"/>
    </LinearLayout>


    <Button
        android:id="@+id/result_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"/>

    <TextView
        android:id="@+id/answer_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>